--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		<a href="Raymond G Feilner Jr - Resume.html">
 			<h2 class="header">Resume</h2>
 			<span id="notebook_paper" class="icon">
-				<img src="paper-50x66.png" alt="Raymond G. Feilner, Jr.'s Resume Icon">
+				<img src="Paper-50x66.png" alt="Raymond G. Feilner, Jr.'s Resume Icon">
 			</span>
 			<span class="message">Click here to view a list of some of my professional accomplishments.</span>
 		</a>
