Update Raymond G Feilner Jr - CV.html

--- a/Raymond G Feilner Jr - CV.html
+++ b/Raymond G Feilner Jr - CV.html
@@ -25,33 +25,7 @@
 		<script src="main.js"></script>
 
 	</head>
-     <body onLoad="draw();">
-<!--
-		<canvas id="canvas" class="canvas canvases" width="600" height="600"></canvas>  
-    	<canvas id="object" class="swatch object canvases" width="100" height="100"></canvas>  
-	    	<canvas id="line" class="swatch line canvases" width="100" height="100"></canvas>
-        <br />
-		<span id="red">Red<textarea id="red_input" class="color_value" cols="3">128</textarea></span>
-		<input type="range" min="1" max="256" value="128" class="slider" id="slider-red">
-		<span id="green">Green<textarea id="green_input" class="color_value" cols="3">128</textarea></span>  
-		<span id="blue">Blue<textarea id="blue_input" class="color_value" cols="3">128</textarea></span>
-		<span id="alpha">Alpha<textarea id="alpha_input" class="color_value" cols="3">1.0</textarea></span>
-        <br />
-     	<p class="title">Cursor Position:  <span id="cursor_pos">0, 0</span></p>
-     	<p class="title">MouseDown Position:  <span id="mousedown_pos">0, 0</span></p>
-     	<p class="title">MouseUp Position:  <span id="mouseup_pos">0, 0</span></p>
-     	<p class="title">Click Position:  <span id="click_pos">0, 0</span></p>
--->		
-<!--
-		 <div id="duplicate_header" class="framed">
-			 <h1 id="my_name" class="name">Raymond G. Feilner, Jr.</h1>
-			 <div id="my_contact_info" class="contact_info">
-				 <a id="my_address" class="address">331 Imperial Lane | Fenton, MO 63026</a>
-				 <a id="my_email" class="email" href="rfeilner@ucmerced.edu">rfeilner@ucmerced.edu</a>
-				 <a id="my_phone" class="phone" href="tel:314-750-3750">(314) 750-3750</a>
-			 </div>
-		 </div>
-		 -->
+     <body>
 		 
 		 
 	
@@ -63,11 +37,6 @@
 			 <span id="name_logo" class="logo">
 				 <img src="Raymond Feilner - Logo-5.png" alt="Raymond G. Feilner, Jr.">
 			 </span>
-			 <!--<div id="my_contact_info" class="contact_info">
-				 <p><a id="my_address" class="address" href="https://www.google.com/maps/place/331+Imperial+Ln,+Fenton,+MO+63026/@38.6433032,-90.464963,41386m/data=!3m1!1e3!4m5!3m4!1s0x87d8ce2e93b7cf7d:0x8dd865f8ecc438ea!8m2!3d38.5325328!4d-90.4439171?hl=en">331 Imperial Lane | Fenton, MO 63026</a></p>
-				 <p><a id="my_email" class="email" href="rfeilner@ucmerced.edu">rfeilner@ucmerced.edu</a></p>
-				 <p><a id="my_phone" class="phone" href="tel:314-750-3750">(314) 750-3750</a></p>
-			 </div>-->
 		 </section>
 		 <section id="objective">I help people apply evidence-based practices to ask structured questions. Then, I gather proper evidence. I evaluate the data, using appropriate computational and statistical tools. I effectively interpret and communicate those results. I apply those results into practice in a manner customized to the unique problem. I utilize subsequent feedback to improve or maintain those interventions. In doing so, I aim to effectively manage, improve, and further integrate our systems of technological, social, and cognitive tools. </section>
 		 <section id="education">
