Update Album Covers Gallery.html

--- a/Album Covers Gallery.html
+++ b/Album Covers Gallery.html
@@ -3,12 +3,8 @@
 		<title>Raymond G. Feilner, Jr.'s Album Covers Gallery</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:title" content="Raymond G. Feilner, Jr.'s Album Covers Gallery"/>
-		
-		
-		<meta property="og:type" content="company"/>
-		
-		
-		<meta property="og:url" content="http://www.rfeilner.com"/>
+		<meta property="og:type" content="portfolio"/>
+		<meta property="og:url" content="https://rfeilner.github.io"/>
 		<meta property="og:image" content="Raymond Feilner - Logo-5.png"/>
 		<meta property="og:site_name" content="Raymond G. Feilner, Jr.'s Album Covers Gallery"/>
 		<meta property="fb:admins" content="USER_ID"/>
@@ -27,8 +23,6 @@
 
 	</head>
      <body>
-		 
-
 		 <section id="header">
 			 <!--<h1 id="my_name" class="name">Raymond G. Feilner, Jr.</h1>-->
 			 <span id="name_logo" class="logo">
@@ -43,8 +37,6 @@
 			 <div id="album_covers_parallax_2" class="parallax"></div>
 			 <h2 class="subheader">Dare Devil - Self-titled</h2>
 			 <div id="album_covers_parallax_3" class="parallax"></div>
-			 <div id="album_covers_parallax_3" class="parallax"></div>
-
 		</body>  
 	</html>  
 
