--- a/Experimental Gallery.html
+++ b/Experimental Gallery.html
@@ -3,11 +3,8 @@
 		<title>Raymond G. Feilner, Jr.'s Experimental Gallery</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:title" content="Raymond G. Feilner, Jr.'s Experimental Gallery"/>
-		
-		
-		<meta property="og:type" content="company"/>
-		
-		
+		<meta property="og:type" content="portfolio"/>
+		<meta property="og:url" content="https://rfeilner.github.io"/>
 		<meta property="og:url" content="http://www.rfeilner.com"/>
 		<meta property="og:image" content="Raymond Feilner - Logo-5.png"/>
 		<meta property="og:site_name" content="Raymond G. Feilner, Jr.'s Experimental Gallery"/>
@@ -27,7 +24,6 @@
 
 	</head>
      <body>
-
 		 <section id="header">
 			 <!--<h1 id="my_name" class="name">Raymond G. Feilner, Jr.</h1>-->
 			 <span id="name_logo" class="logo">
@@ -40,9 +36,6 @@
 			 <div id="experimental_parallax_1" class="parallax"></div>
 			 <h2 class="subheader">Torus: Free-viewing Stereoscopic Image</h2>
 			 <div id="experimental_parallax_2" class="parallax"></div>
-			 <div id="experimental_parallax_2" class="parallax"></div>
-
-
 		</body>  
 	</html>  
 
