--- a/Photo Editing Gallery.html
+++ b/Photo Editing Gallery.html
@@ -3,12 +3,8 @@
 		<title>Raymond G. Feilner, Jr.'s Photo Editing Gallery</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:title" content="Raymond G. Feilner, Jr.'s Photo Editing Gallery"/>
-		
-		
-		<meta property="og:type" content="company"/>
-		
-		
-		<meta property="og:url" content="http://www.rfeilner.com"/>
+		<meta property="og:type" content="portfolio"/>
+		<meta property="og:url" content="https://rfeilner.github.io"/>
 		<meta property="og:image" content="Raymond Feilner - Logo-5.png"/>
 		<meta property="og:site_name" content="Raymond G. Feilner, Jr.'s Photo Editing Gallery"/>
 		<meta property="fb:admins" content="USER_ID"/>
@@ -27,9 +23,6 @@
 
 	</head>
      <body>
-
-		 
-
 		 <section id="header">
 			 <!--<h1 id="my_name" class="name">Raymond G. Feilner, Jr.</h1>-->
 			 <span id="name_logo" class="logo">
@@ -42,8 +35,6 @@
 			 <div id="photo_editing_parallax_1" class="parallax"></div>
 			 <h2 class="subheader">Cute Baby Photo Editing Samples</h2>
 			 <div id="photo_editing_parallax_2" class="parallax"></div>
-			 <div id="photo_editing_parallax_2" class="parallax"></div>
-
 		</body>  
 	</html>  
 
