Update 3D Animated Music Video Clips Gallery.html

--- a/3D Animated Music Video Clips Gallery.html
+++ b/3D Animated Music Video Clips Gallery.html
@@ -3,12 +3,8 @@
 		<title>Raymond G. Feilner, Jr.'s 3D Animated Music Video Clips Gallery</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:title" content="Raymond G. Feilner, Jr.'s 3D Animated Music Video Clips Gallery"/>
-		
-		
-		<meta property="og:type" content="company"/>
-		
-		
-		<meta property="og:url" content="http://www.rfeilner.com"/>
+		<meta property="og:type" content="portfolio"/>
+		<meta property="og:url" content="https://rfeilner.github.io"/>
 		<meta property="og:image" content="Raymond Feilner - Logo-5.png"/>
 		<meta property="og:site_name" content="Raymond G. Feilner, Jr.'s 3D Animated Music Video Clips Gallery"/>
 		<meta property="fb:admins" content="USER_ID"/>
@@ -27,7 +23,6 @@
 
 	</head>
      <body>
-
 		 <section id="header">
 			 <!--<h1 id="my_name" class="name">Raymond G. Feilner, Jr.</h1>-->
 			 <span id="name_logo" class="logo">
@@ -41,10 +36,5 @@
 			 <div>3D animation, music, and vocals produced by Raymond G. Feilner, Jr.</div>
 			 <div>Inspired by the playful melodies of the crackles and dancing of the luminous embers of a warm campfire while adventuring in the forest.</div>
 		 </section>
-
-
 		</body>  
-	</html>  
-
-
-
+	</html>
