--- a/Raymond G Feilner Jr - CV.html
+++ b/Raymond G Feilner Jr - CV.html
@@ -3,12 +3,8 @@
 	<title>Raymond G. Feilner, Jr.'s CV</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:title" content="Raymond G. Feilner, Jr.'s CV"/>
-		
-		
-		<meta property="og:type" content="company"/>
-		
-		
-		<meta property="og:url" content="http://www.rfeilner.com"/>
+		<meta property="og:type" content="portfolio"/>
+		<meta property="og:url" content="https://rfeilner.github.io"/>
 		<meta property="og:image" content="Raymond Feilner - Logo-5.png"/>
 		<meta property="og:site_name" content="Raymond G. Feilner, Jr.'s CV"/>
 		<meta property="fb:admins" content="USER_ID"/>
@@ -26,12 +22,6 @@
 
 	</head>
      <body>
-		 
-		 
-	
-		 
-		 
-		 
 		 <section id="header">
 			 <!--<h1 id="my_name" class="name">Raymond G. Feilner, Jr.</h1>-->
 			 <span id="name_logo" class="logo">
@@ -450,9 +440,5 @@
 					 </ul>
 				 </div>
 			 </section>
-
 		</body>  
-	</html>  
-
-
-
+	</html>
