--- a/Raymond G Feilner Jr - Resume.html
+++ b/Raymond G Feilner Jr - Resume.html
@@ -3,12 +3,8 @@
 		<title>Raymond G. Feilner, Jr.'s Resume</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:title" content="Raymond G. Feilner, Jr.'s Resume"/>
-		
-		
-		<meta property="og:type" content="company"/>
-		
-		
-		<meta property="og:url" content="http://www.rfeilner.com"/>
+		<meta property="og:type" content="portfolio"/>
+		<meta property="og:url" content="https://rfeilner.github.io"/>
 		<meta property="og:image" content="Raymond Feilner - Logo-5.png"/>
 		<meta property="og:site_name" content="Raymond G. Feilner, Jr.'s Resume"/>
 		<meta property="fb:admins" content="USER_ID"/>
@@ -27,11 +23,6 @@
 
 	</head>
      <body>
-		 
-	
-		 
-		 
-		 
 		 <section id="header">
 			 <!--<h1 id="my_name" class="name">Raymond G. Feilner, Jr.</h1>-->
 			 <span id="name_logo" class="logo">
@@ -188,7 +179,6 @@
  					 <span class="location">Merced, California</span>
  					 <span class="date">Graduation Date: December 2017</span>
  				 </div>
-
  				 <ul>
  					 <li class="bulleted">Master of Arts in <b>Psychological Sciences: Quantitative Psychology</b></li>
  				 </ul>
@@ -208,7 +198,4 @@
  			 </div>
  		 </section>
 	  </body>
-</html>  
-
-
-
+</html>
