Update Reflection and Refraction Art Gallery.html

--- a/Reflection and Refraction Art Gallery.html
+++ b/Reflection and Refraction Art Gallery.html
@@ -3,12 +3,8 @@
 		<title>Raymond G. Feilner, Jr.'s Reflection and Refraction Art Gallery</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:title" content="Raymond G. Feilner, Jr.'s Reflection and Refraction Art Gallery"/>
-		
-		
-		<meta property="og:type" content="company"/>
-		
-		
-		<meta property="og:url" content="http://www.rfeilner.com"/>
+		<meta property="og:type" content="portfolio"/>
+		<meta property="og:url" content="https://rfeilner.github.io"/>
 		<meta property="og:image" content="Raymond Feilner - Logo-5.png"/>
 		<meta property="og:site_name" content="Raymond G. Feilner, Jr.'s Reflection and Refraction Art Gallery"/>
 		<meta property="fb:admins" content="USER_ID"/>
@@ -27,14 +23,11 @@
 
 	</head>
      <body>
-		 
-		 
 		 <section id="header">
 			 <!--<h1 id="my_name" class="name">Raymond G. Feilner, Jr.</h1>-->
 			 <span id="name_logo" class="logo">
 				 <img src="Raymond Feilner - Logo-5.png" alt="Raymond G. Feilner, Jr.">
 			 </span>
-
 		 </section>
 			 <h2 class="subheader">Reflection and Refraction Art Gallery</h2>
 			 <div id="down_parallax" class="parallax"></div>
@@ -48,9 +41,5 @@
 			 <div id="glass_parallax_4" class="parallax"></div>
 			 <h2 class="subheader">In Flux</h2>
 			 <div id="glass_parallax_5" class="parallax"></div>
-			 <div id="glass_parallax_5" class="parallax"></div>
 		</body>  
-	</html>  
-
-
-
+	</html>
