--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 	<title>Raymond G. Feilner, Jr.'s Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:title" content="Raymond G. Feilner, Jr.'s Portfolio"/>
-
 	<meta property="og:type" content="portfolio"/>
-
-	<meta property="og:url" content="http://www.rfeilner.com"/>
+	<meta property="og:url" content="https://rfeilner.github.io"/>
 	<meta property="og:image" content="Raymond Feilner - Logo-5.png"/>
 	<meta property="og:site_name" content="Raymond G. Feilner, Jr.'s Portfolio"/>
 	<meta property="fb:admins" content="USER_ID"/>
