--- a/index.html
+++ b/index.html
@@ -36,29 +36,48 @@
 	<h2 class="subheader">Multimedia Art Portfolio Gallery</h2>
 			 
 	<div id="down_parallax" class="parallax"></div>
+	
 	<a href="3D Animated Music Video Clips Gallery.html">
 		<h2 class="subheader">3D Animated Music Video Clips Gallery</h2>
 		<div id="animation_parallax_1" class="parallax"></div>
+		
+		<img class="no_parallax" src="Multimedia Art Portfolio/1. 3D Animated Music Video Clips/a. Pyromaniac Symphony Image.png" alt="3D Animated Music Video Clips Gallery">
+		
 	</a>
 	<a href="Photo Editing Gallery.html">
 		<h2 class="subheader">Photo Editing Gallery</h2>
 		<div id="photo_editing_parallax_1" class="parallax"></div>
+		
+		<img class="no_parallax" src="Multimedia Art Portfolio/2. Photo Editing/a. Studly - Antique.png" alt="Photo Editing Gallery">
+		
 	</a>
 	<a href="Album Covers Gallery.html">
 		<h2 class="subheader">Album Covers Gallery</h2>
 		<div id="album_covers_parallax_1" class="parallax"></div>
+		
+		<img class="no_parallax" src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Album Covers Gallery">
+		
 	</a>
 	<a href="Surreal Art Gallery.html">
 		<h2 class="subheader">Surreal Art Gallery</h2>
 		<div id="surreal_parallax_1" class="parallax"></div>
+		
+		<img class="no_parallax" src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" alt="Surreal Art Gallery">
+		
 	</a>
 	<a href="Reflection and Refraction Art Gallery.html">
 		<h2 class="subheader">Explorations of Reflections and Refractivity Gallery</h2>
 		<div id="glass_parallax_1" class="parallax"></div>
+		
+		<img class="no_parallax" src="Multimedia Art Portfolio/5. Glass Art/a. Glass Florette.png" alt="Reflection and Refraction Art Gallery">
+		
 	</a>
 	<a href="Experimental Gallery.html">
 		<h2 class="subheader">Experimental Gallery</h2>
 		<div id="experimental_parallax_1" class="parallax"></div>
+
+		<img class="no_parallax" src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Experimental Gallery">
+
 	</a>
 
 	<section id="portfolio">
