--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>  
+u<html>  
 <head>
 	<title>Raymond G. Feilner, Jr.'s Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,25 +34,25 @@
 	<!--<section id="objective">I help people apply evidence-based practices to ask structured questions. Then, I gather proper evidence. I evaluate the data, using appropriate computational and statistical tools. I effectively interpret and communicate those results. I apply those results into practice in a manner customized to the unique problem. I utilize subsequent feedback to improve or maintain those interventions. In doing so, I aim to effectively manage, improve, and further integrate our systems of technological, social, and cognitive tools. </section>-->
 
 	<section class="icon_menu">
-		<a id="animation" class="thumbnail" href="3D Animated Music Video Clips Gallery.html">
+		<a id="animation" class="menu_icon" href="3D Animated Music Video Clips Gallery.html">
 			<img src="Multimedia Art Portfolio/1. 3D Animated Music Video Clips/a. Pyromaniac Symphony Image.png" alt="3D Animated Music Video Clips Gallery">
 		</a>
-		<a id="photo_editing" class="thumbnail" href="Photo Editing Gallery.html">
+		<a id="photo_editing" class="menu_icon" href="Photo Editing Gallery.html">
 			<img src="Multimedia Art Portfolio/2. Photo Editing/a. Studly - Antique.png" alt="Photo Editing Gallery">
 		</a>
-		<a id="album_covers" class="thumbnail" href="Album Covers Gallery.html">
+		<a id="album_covers" class="menu_icon" href="Album Covers Gallery.html">
 			<img src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Album Covers Gallery">
 		</a>
-		<a id="surreal" class="thumbnail" href="Surreal Art Gallery.html">
+		<a id="surreal" class="menu_icon" href="Surreal Art Gallery.html">
 			<img src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" alt="Surreal Art Gallery">
 		</a>
-		<a id="glass" class="thumbnail" href="Reflection and Refraction Art Gallery.html">
+		<a id="glass" class="menu_icon" href="Reflection and Refraction Art Gallery.html">
 			<img src="Multimedia Art Portfolio/5. Glass Art/a. Glass Florette.png" alt="Reflection and Refraction Art Gallery">
 		</a>
-		<a id="experimental" class="thumbnail" href="Experimental Gallery.html">
+		<a id="experimental" class="menu_icon" href="Experimental Gallery.html">
 			<img src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Experimental Gallery">
 		</a>
-		<a id="notebook_paper" class="thumbnail" href="Raymond G Feilner Jr - Resume.html">
+		<a id="notebook_paper" class="menu_icon" href="Raymond G Feilner Jr - Resume.html">
 			<img src="Paper-50x66.png" alt="Raymond G. Feilner, Jr.'s Resume Icon">
 		</a>
 	</section>
