Update Photo Editing Gallery.html

--- a/Photo Editing Gallery.html
+++ b/Photo Editing Gallery.html
@@ -29,12 +29,18 @@
 				 <img src="Raymond Feilner - Logo-5.png" alt="Raymond G. Feilner, Jr.">
 			 </span>
 		 </section>
-			 <h2 class="subheader">Photo Editing Gallery</h2>
-			 <div id="down_parallax" class="parallax"></div>
-			 <h2 class="subheader">A Hunka Hunka Burnin' Love</h2>
-			 <div id="photo_editing_parallax_1" class="parallax"></div>
-			 <h2 class="subheader">Cute Baby Photo Editing Samples</h2>
-			 <div id="photo_editing_parallax_2" class="parallax"></div>
+			<h2 class="subheader">Photo Editing Gallery</h2>
+			<div id="down_parallax" class="parallax"></div>
+			<h2 class="subheader">Hunka Hunka Burnin' Love</h2>
+	     		<div id="photo_editing_parallax_1" class="parallax"></div>
+	     
+	     		<img class="no_parallax" src="Multimedia Art Portfolio/2. Photo Editing/a. Studly - Antique.png" alt="Photo Edit of my Head on Elvis's Body with 2 Women on my Shoulders">
+
+			<h2 class="subheader">Cute Baby Photo Editing Samples</h2>
+			<div id="photo_editing_parallax_2" class="parallax"></div>
+	     
+	     		<img class="no_parallax" src="Multimedia Art Portfolio/2. Photo Editing/b. Cute Baby Examples.png" alt="Cute Baby Photo Editing Samples">
+
 		</body>  
 	</html>  
 
