Update Photo Editing Gallery.html

--- a/Photo Editing Gallery.html
+++ b/Photo Editing Gallery.html
@@ -30,6 +30,7 @@
 			 </span>
 		 </section>
 			<h1 class="subheader">Photo Editing Gallery</h1>
+	     		<div class="spacer"></div>
 			<div id="down_parallax" class="parallax"></div>
 			<h2 class="subheader">Hunka Hunka Burnin' Love</h2>
 	     		<div id="photo_editing_parallax_1" class="parallax"></div>
