Update Photo Editing Gallery.html

--- a/Photo Editing Gallery.html
+++ b/Photo Editing Gallery.html
@@ -29,6 +29,31 @@
 				 <img src="Raymond Feilner - Logo-5.png" alt="Raymond G. Feilner, Jr.">
 			 </span>
 		 </section>
+
+	<section class="icon_menu">
+		<a id="animation" class="menu_icon" href="3D Animated Music Video Clips Gallery.html">
+			<img src="Multimedia Art Portfolio/1. 3D Animated Music Video Clips/a. Pyromaniac Symphony Image.png" alt="3D Animated Music Video Clips Gallery">
+		</a>
+		<a id="photo_editing" class="menu_icon" href="Photo Editing Gallery.html">
+			<img src="Multimedia Art Portfolio/2. Photo Editing/a. Studly - Antique.png" alt="Photo Editing Gallery">
+		</a>
+		<a id="album_covers" class="menu_icon" href="Album Covers Gallery.html">
+			<img src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Album Covers Gallery">
+		</a>
+		<a id="surreal" class="menu_icon" href="Surreal Art Gallery.html">
+			<img src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" alt="Surreal Art Gallery">
+		</a>
+		<a id="glass" class="menu_icon" href="Reflection and Refraction Art Gallery.html">
+			<img src="Multimedia Art Portfolio/5. Glass Art/a. Glass Florette.png" alt="Reflection and Refraction Art Gallery">
+		</a>
+		<a id="experimental" class="menu_icon" href="Experimental Gallery.html">
+			<img src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Experimental Gallery">
+		</a>
+		<a id="notebook_paper" class="menu_icon" href="Raymond G Feilner Jr - Resume.html">
+			<img src="Paper-50x66.png" alt="Raymond G. Feilner, Jr.'s Resume Icon">
+		</a>
+	</section>
+
 			<h1 class="subheader">Photo Editing Gallery</h1>
 	     		<div class="spacer"></div>
 			<div id="down_parallax" class="parallax"></div>
