Update 3D Animated Music Video Clips Gallery.html

--- a/3D Animated Music Video Clips Gallery.html
+++ b/3D Animated Music Video Clips Gallery.html
@@ -29,12 +29,37 @@
 				 <img src="Raymond Feilner - Logo-5.png" alt="Raymond G. Feilner, Jr.">
 			 </span>
 		 </section>
-		 <h2 class="subheader">3D Animated Music Video Clips Gallery</h2>
-		 <iframe width="100%" height="50%" src="https://www.youtube.com/embed/XWBGehtmpL8" title="Pyromaniac Symphony - YouTube Video Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		 <h2 class="subheader">Pyromaniac Symphony</h2>
-		 <section class="details">
-			 <div>3D animation, music, and vocals produced by Raymond G. Feilner, Jr.</div>
-			 <div>Inspired by the playful melodies of the crackles and dancing of the luminous embers of a warm campfire while adventuring in the forest.</div>
-		 </section>
-		</body>  
-	</html>
+
+	<section class="icon_menu">
+		<a id="animation" class="menu_icon" href="3D Animated Music Video Clips Gallery.html">
+			<img src="Multimedia Art Portfolio/1. 3D Animated Music Video Clips/a. Pyromaniac Symphony Image.png" alt="3D Animated Music Video Clips Gallery">
+		</a>
+		<a id="photo_editing" class="menu_icon" href="Photo Editing Gallery.html">
+			<img src="Multimedia Art Portfolio/2. Photo Editing/a. Studly - Antique.png" alt="Photo Editing Gallery">
+		</a>
+		<a id="album_covers" class="menu_icon" href="Album Covers Gallery.html">
+			<img src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Album Covers Gallery">
+		</a>
+		<a id="surreal" class="menu_icon" href="Surreal Art Gallery.html">
+			<img src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" alt="Surreal Art Gallery">
+		</a>
+		<a id="glass" class="menu_icon" href="Reflection and Refraction Art Gallery.html">
+			<img src="Multimedia Art Portfolio/5. Glass Art/a. Glass Florette.png" alt="Reflection and Refraction Art Gallery">
+		</a>
+		<a id="experimental" class="menu_icon" href="Experimental Gallery.html">
+			<img src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Experimental Gallery">
+		</a>
+		<a id="notebook_paper" class="menu_icon" href="Raymond G Feilner Jr - Resume.html">
+			<img src="Paper-50x66.png" alt="Raymond G. Feilner, Jr.'s Resume Icon">
+		</a>
+	</section>
+
+	     	<h2 class="subheader">3D Animated Music Video Clips Gallery</h2>
+		<iframe width="100%" height="50%" src="https://www.youtube.com/embed/XWBGehtmpL8" title="Pyromaniac Symphony - YouTube Video Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<h2 class="subheader">Pyromaniac Symphony</h2>
+		<section class="details">
+			<div>3D animation, music, and vocals produced by Raymond G. Feilner, Jr.</div>
+			<div>Inspired by the playful melodies of the crackles and dancing of the luminous embers of a warm campfire while adventuring in the forest.</div>
+		</section>
+	</body>  
+</html>
