Update Album Covers Gallery.html

--- a/Album Covers Gallery.html
+++ b/Album Covers Gallery.html
@@ -60,15 +60,15 @@
 	     
 			<h2 class="subheader">Dare Devil - The Blackout EP</h2>
 			<div id="album_covers_parallax_1" class="parallax"></div>
-			<img src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Dare Devil - The Blackout EP">
+			<img class="no_parallax" src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Dare Devil - The Blackout EP">
 
 			<h2 class="subheader">Dare Devil - Spacebound</h2>
 			<div id="album_covers_parallax_2" class="parallax"></div>
-			<img src="Multimedia Art Portfolio/3. Album Covers/b. Dare Devil - Spacebound.jpg" alt="Dare Devil - Spacebound">
+			<img class="no_parallax" src="Multimedia Art Portfolio/3. Album Covers/b. Dare Devil - Spacebound.jpg" alt="Dare Devil - Spacebound">
 
 			<h2 class="subheader">Dare Devil - Self-titled</h2>
 			<div id="album_covers_parallax_3" class="parallax"></div>
-			<img src="Multimedia Art Portfolio/3. Album Covers/c. Dare Devil - Self-titled.jpg" alt="Dare Devil - Self-titled">
+			<img class="no_parallax" src="Multimedia Art Portfolio/3. Album Covers/c. Dare Devil - Self-titled.jpg" alt="Dare Devil - Self-titled">
 
 		</body>  
 	</html>  
