Update Surreal Art Gallery.html

--- a/Surreal Art Gallery.html
+++ b/Surreal Art Gallery.html
@@ -60,23 +60,23 @@
 	     
 			<h2 class="subheader">Mortality</h2>
 			<div id="surreal_parallax_1" class="parallax"></div>
-			<img src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" alt="A beheaded teddy bear with balls of fluff nearby.">
+			<img class="no_parallax" src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" alt="A beheaded teddy bear with balls of fluff nearby.">
 
 			<h2 class="subheader">Horizons</h2>
 			<div id="surreal_parallax_2" class="parallax"></div>
-			<img src="Multimedia Art Portfolio/4. Surreal Art/b. Flying Eye with Orange on Horizon.png" alt="An eyeball atop a wing of butter knife edges soaring in front of an orange. Inspired by a fanciful late-night dinner at a diner.">
+			<img class="no_parallax" src="Multimedia Art Portfolio/4. Surreal Art/b. Flying Eye with Orange on Horizon.png" alt="An eyeball atop a wing of butter knife edges soaring in front of an orange. Inspired by a fanciful late-night dinner at a diner.">
 
 			<h2 class="subheader">Dream Characters</h2>
 			<div id="surreal_parallax_3" class="parallax"></div>
-			<img src="Multimedia Art Portfolio/4. Surreal Art/c. Dream Characters.png" alt="A set of recurrent bizarre characters from past dreams.">
+			<img class="no_parallax" src="Multimedia Art Portfolio/4. Surreal Art/c. Dream Characters.png" alt="A set of recurrent bizarre characters from past dreams.">
 
 			<h2 class="subheader">Daliesque</h2>
 			<div id="surreal_parallax_4" class="parallax"></div>
-			<img src="Multimedia Art Portfolio/4. Surreal Art/d. Daliesque.png" alt="A landscape in the style of Salvador Dali with cubist influences.">
+			<img class="no_parallax" src="Multimedia Art Portfolio/4. Surreal Art/d. Daliesque.png" alt="A landscape in the style of Salvador Dali with cubist influences.">
 
 			<h2 class="subheader">Bub Lee</h2>
 			<div id="surreal_parallax_5" class="parallax"></div>
-			<img src="Multimedia Art Portfolio/4. Surreal Art/e. Bubble Cartoon.png" alt="A cartoon bubble with rainbow refractions and light-bending curves at the beach.">
+			<img class="no_parallax" src="Multimedia Art Portfolio/4. Surreal Art/e. Bubble Cartoon.png" alt="A cartoon bubble with rainbow refractions and light-bending curves at the beach.">
 
 		</body>
 	</html>
