Update Reflection and Refraction Art Gallery.html

--- a/Reflection and Refraction Art Gallery.html
+++ b/Reflection and Refraction Art Gallery.html
@@ -60,23 +60,23 @@
 
 			<h2 class="subheader">Serenity</h2>
 			<div id="glass_parallax_1" class="parallax"></div>
-			<img src="Multimedia Art Portfolio/5. Glass Art/a. Glass Florette.png" alt="Glass Florette">
+			<img class="no_parallax" src="Multimedia Art Portfolio/5. Glass Art/a. Glass Florette.png" alt="Glass Florette">
 
 			<h2 class="subheader">Contemplative</h2>
 			<div id="glass_parallax_2" class="parallax"></div>
-			<img src="Multimedia Art Portfolio/5. Glass Art/b. Spheroid.png" alt="Glass Spheroid">
+			<img class="no_parallax" src="Multimedia Art Portfolio/5. Glass Art/b. Spheroid.png" alt="Glass Spheroid">
 
 			<h2 class="subheader">Sanguine</h2>
 			<div id="glass_parallax_3" class="parallax"></div>
-			<img src="Multimedia Art Portfolio/5. Glass Art/c. Hemaglobin.png" alt="Hemoglobin">
+			<img class="no_parallax" src="Multimedia Art Portfolio/5. Glass Art/c. Hemaglobin.png" alt="Hemoglobin">
 
 			<h2 class="subheader">Deep Within</h2>
 			<div id="glass_parallax_4" class="parallax"></div>
-			<img src="Multimedia Art Portfolio/5. Glass Art/d. Floral Glass Orb.png" alt="Floral Glass Orb">
+			<img class="no_parallax" src="Multimedia Art Portfolio/5. Glass Art/d. Floral Glass Orb.png" alt="Floral Glass Orb">
 
 			<h2 class="subheader">In Flux</h2>
 			<div id="glass_parallax_5" class="parallax"></div>
-			<img src="Multimedia Art Portfolio/5. Glass Art/e. Bangles.png" alt="Toroidal Glass Sculpture">
+			<img class="no_parallax" src="Multimedia Art Portfolio/5. Glass Art/e. Bangles.png" alt="Toroidal Glass Sculpture">
 
 		</body>  
 	</html>
