--- a/Experimental Gallery.html
+++ b/Experimental Gallery.html
@@ -60,11 +60,11 @@
 	     
 			<h2 class="subheader">Moon: Autostereoscopic Image</h2>
 			<div id="experimental_parallax_1" class="parallax"></div>
-			<img src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Autostereoscope of a moon made in a similar style to Magic Eye">
+			<img class="no_parallax" src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Autostereoscope of a moon made in a similar style to Magic Eye">
 
 			<h2 class="subheader">Torus: Free-viewing Stereoscopic Image</h2>
 			<div id="experimental_parallax_2" class="parallax"></div>
-			<img src="Multimedia Art Portfolio/6. Experimental/b. Freeviewing Stereoscopic Image - Torus.png" alt="Stereoscopic image of a torus made in a similar style to a ViewMaster slide">
+			<img class="no_parallax" src="Multimedia Art Portfolio/6. Experimental/b. Freeviewing Stereoscopic Image - Torus.png" alt="Stereoscopic image of a torus made in a similar style to a ViewMaster slide">
 
 		</body>  
 	</html>  
