--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@ u<html>
 	<!--<section id="objective">I help people apply evidence-based practices to ask structured questions. Then, I gather proper evidence. I evaluate the data, using appropriate computational and statistical tools. I effectively interpret and communicate those results. I apply those results into practice in a manner customized to the unique problem. I utilize subsequent feedback to improve or maintain those interventions. In doing so, I aim to effectively manage, improve, and further integrate our systems of technological, social, and cognitive tools. </section>-->
 
 	<section class="icon_menu">
+		<a id="home" class="menu_icon" href="index.html">
+			<img src="home.png" alt="Homepage">
+		</a>
 		<a id="animation" class="menu_icon" href="3D Animated Music Video Clips Gallery.html">
 			<img src="Multimedia Art Portfolio/1. 3D Animated Music Video Clips/a. Pyromaniac Symphony Image.png" alt="3D Animated Music Video Clips Gallery">
 		</a>
