--- a/Raymond G Feilner Jr - Resume.html
+++ b/Raymond G Feilner Jr - Resume.html
@@ -31,6 +31,9 @@
 		 </section>
 
 	<section class="icon_menu">
+		<a id="home" class="menu_icon" href="index.html">
+			<img src="home.png" alt="Homepage">
+		</a>
 		<a id="animation" class="menu_icon" href="3D Animated Music Video Clips Gallery.html">
 			<img src="Multimedia Art Portfolio/1. 3D Animated Music Video Clips/a. Pyromaniac Symphony Image.png" alt="3D Animated Music Video Clips Gallery">
 		</a>
