--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-u<html>  
+<!DOCTYPE html>
+<html>  
 <head>
 	<title>Raymond G. Feilner, Jr.'s Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
