--- a/Album Covers Gallery.html
+++ b/Album Covers Gallery.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>  
 	<head>
-		<title>Raymond G. Feilner, Jr.'s Album Covers Gallery</title>
+		<title>Raymond G. Feilner, Jr.'s Album Covers and Logos Gallery</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta property="og:title" content="Raymond G. Feilner, Jr.'s Album Covers Gallery"/>
+		<meta property="og:title" content="Raymond G. Feilner, Jr.'s Album Covers and Logos Gallery"/>
 		<meta property="og:type" content="portfolio"/>
 		<meta property="og:url" content="https://rfeilner.github.io"/>
 		<meta property="og:image" content="Raymond Feilner - Logo-5.png"/>
-		<meta property="og:site_name" content="Raymond G. Feilner, Jr.'s Album Covers Gallery"/>
+		<meta property="og:site_name" content="Raymond G. Feilner, Jr.'s Album Covers and Logos Gallery"/>
 		<meta property="fb:admins" content="USER_ID"/>
-		<meta property="og:description" content="Raymond G. Feilner, Jr.'s Album Covers Gallery"/>
+		<meta property="og:description" content="Raymond G. Feilner, Jr.'s Album Covers and Logos Gallery"/>
 		<link rel="icon" href="icon.ico" type="image/x-icon">
-		<meta name="Keywords" content="Raymond G Feilner Jr, Portfolio, Resume, CV, Art, Multimedia, Surreal, Album Covers, Photo Editing, Experimental, Autosetereoscopes, Blender, Photoshop, Gimp, Inkscape, Illustrator, 3D Animated Music Videos">
+		<meta name="Keywords" content="Raymond G Feilner Jr, Portfolio, Resume, CV, Art, Multimedia, Surreal, Album Covers, Logos, Photo Editing, Experimental, Autosetereoscopes, Blender, Photoshop, Gimp, Inkscape, Illustrator, 3D Animated Music Videos">
 
 		<link href="main.css" rel="stylesheet" type="text/css"/>
 
@@ -58,7 +58,7 @@
 		</a>
 	</section>
 	     
-			<h2 class="subheader">Album Covers Gallery</h2>
+			<h2 class="subheader">Album Covers and Logos Gallery</h2>
 	     	     	<div class="spacer"></div>
 			<div id="down_parallax" class="parallax"></div>
 	     
@@ -73,6 +73,10 @@
 			<h2 class="subheader">Dare Devil - Self-titled</h2>
 			<div id="album_covers_parallax_3" class="parallax"></div>
 			<img class="no_parallax" src="Multimedia Art Portfolio/3. Album Covers/c. Dare Devil - Self-titled.jpg" alt="Dare Devil - Self-titled">
+
+	     		<h2 class="subheader">99Ninja Logo: Making Your Hand-drawn Picture Come to Life</h2>
+			<div id="album_covers_parallax_4" class="parallax"></div>
+			<img class="no_parallax" src="Multimedia Art Portfolio/3. Album Covers/d. 99Ninja.png" alt="Graphically designed 99Ninja logo to the left. Hand-drawn logo to the right.">
 
 		</body>  
 	</html>  
