--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta property="fb:admins" content="USER_ID"/>
 	<meta property="og:description" content="Raymond G. Feilner, Jr.'s Portfolio and Resume"/>
 	<link rel="icon" href="icon.ico" type="image/x-icon">
-	<meta name="Keywords" content="Raymond G Feilner Jr, Portfolio, Resume, CV, Art, Multimedia, Surreal, Album Covers, Photo Editing, Experimental, Autosetereoscopes, Blender, Photoshop, Gimp, Inkscape, Illustrator, 3D Animated Music Videos">
+	<meta name="Keywords" content="Raymond G Feilner Jr, Portfolio, Resume, CV, Art, Multimedia, Surreal, Album Covers, Logos, Photo Editing, Experimental, Autosetereoscopes, Blender, Photoshop, Gimp, Inkscape, Illustrator, 3D Animated Music Videos">
 
 	<link href="main.css" rel="stylesheet" type="text/css"/>
 
@@ -78,7 +78,7 @@
 		
 	</a>
 	<a href="Album Covers Gallery.html">
-		<h2 class="subheader">Album Covers Gallery</h2>
+		<h2 class="subheader">Album Covers and Logos Gallery</h2>
 		<div id="album_covers_parallax_1" class="parallax"></div>
 		
 		<img class="no_parallax" src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Album Covers Gallery">
