--- a/Experimental Gallery.html
+++ b/Experimental Gallery.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>  
+<html>
 	<head>
 		<title>Raymond G. Feilner, Jr.'s Experimental Gallery</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,67 +11,59 @@
 		<meta property="fb:admins" content="USER_ID"/>
 		<meta property="og:description" content="Raymond G. Feilner, Jr.'s Experimental Art Techniques Gallery"/>
 		<link rel="icon" href="icon.ico" type="image/x-icon">
-		<meta name="Keywords" content="Raymond G Feilner Jr, Portfolio, Resume, CV, Art, Multimedia, Surreal, Album Covers, Photo Editing, Experimental, Autosetereoscopes, Blender, Photoshop, Gimp, Inkscape, Illustrator, 3D Animated Music Videos">
-
+		<meta name="Keywords" content="Raymond G Feilner Jr, Portfolio, Art, Multimedia, Experimental, Autosetereoscopes, Blender, Photoshop, Gimp, Inkscape, Illustrator, 3D">
 		<link href="main.css" rel="stylesheet" type="text/css"/>
-
-		<script src="http://code.jquery.com/jquery-latest.js"></script>
-		<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
-		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
-
-		<script src="main.js"></script>
-
+		<!--<script src="https://code.jquery.com/jquery-latest.js"></script>-->
+		<!--<script src="main.js"></script>-->
 	</head>
-     <body>
+	<body>
+		<!-- Name Logo -->
 		 <section id="header">
 			 <!--<h1 id="my_name" class="name">Raymond G. Feilner, Jr.</h1>-->
 			 <span id="name_logo" class="logo">
 				 <img src="Raymond Feilner - Logo-5.png" alt="Raymond G. Feilner, Jr.">
 			 </span>
 		 </section>
+		<!-- Icon Menu -->
+		<section class="icon_menu">
+			<a id="home" class="menu_icon" href="index.html">
+				<img src="home.png" alt="Homepage">
+			</a>
+			<a id="animation" class="menu_icon" href="3D Animated Music Video Clips Gallery.html">
+				<img src="Multimedia Art Portfolio/1. 3D Animated Music Video Clips/a. Pyromaniac Symphony Image.png" alt="3D Animated Music Video Clips Gallery">
+			</a>
+			<a id="photo_editing" class="menu_icon" href="Photo Editing Gallery.html">
+				<img src="Multimedia Art Portfolio/2. Photo Editing/a. Studly - Antique.png" alt="Photo Editing Gallery">
+			</a>
+			<a id="album_covers" class="menu_icon" href="Album Covers Gallery.html">
+				<img src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Album Covers Gallery">
+			</a>
+			<a id="surreal" class="menu_icon" href="Surreal Art Gallery.html">
+				<img src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" alt="Surreal Art Gallery">
+			</a>
+			<a id="glass" class="menu_icon" href="Reflection and Refraction Art Gallery.html">
+				<img src="Multimedia Art Portfolio/5. Glass Art/a. Glass Florette.png" alt="Reflection and Refraction Art Gallery">
+			</a>
+			<a id="experimental" class="menu_icon" href="Experimental Gallery.html">
+				<img src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Experimental Gallery">
+			</a>
+			<a id="notebook_paper" class="menu_icon" href="Raymond G Feilner Jr - Resume.html">
+				<img src="Paper-50x66.png" alt="Raymond G. Feilner, Jr.'s Resume Icon">
+			</a>
+		</section>
+		<!-- Large Linkable Gallery Images -->
+		<h2 class="subheader">Experimental Gallery</h2>
+		<!-- Separator between gallery title and images -->
+		<div class="spacer"></div>
+		<!-- Spacing image with scroll command -->
+		<div id="down_parallax" class="parallax"></div>
 
-	<section class="icon_menu">
-		<a id="home" class="menu_icon" href="index.html">
-			<img src="home.png" alt="Homepage">
-		</a>
-		<a id="animation" class="menu_icon" href="3D Animated Music Video Clips Gallery.html">
-			<img src="Multimedia Art Portfolio/1. 3D Animated Music Video Clips/a. Pyromaniac Symphony Image.png" alt="3D Animated Music Video Clips Gallery">
-		</a>
-		<a id="photo_editing" class="menu_icon" href="Photo Editing Gallery.html">
-			<img src="Multimedia Art Portfolio/2. Photo Editing/a. Studly - Antique.png" alt="Photo Editing Gallery">
-		</a>
-		<a id="album_covers" class="menu_icon" href="Album Covers Gallery.html">
-			<img src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Album Covers Gallery">
-		</a>
-		<a id="surreal" class="menu_icon" href="Surreal Art Gallery.html">
-			<img src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" alt="Surreal Art Gallery">
-		</a>
-		<a id="glass" class="menu_icon" href="Reflection and Refraction Art Gallery.html">
-			<img src="Multimedia Art Portfolio/5. Glass Art/a. Glass Florette.png" alt="Reflection and Refraction Art Gallery">
-		</a>
-		<a id="experimental" class="menu_icon" href="Experimental Gallery.html">
-			<img src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Experimental Gallery">
-		</a>
-		<a id="notebook_paper" class="menu_icon" href="Raymond G Feilner Jr - Resume.html">
-			<img src="Paper-50x66.png" alt="Raymond G. Feilner, Jr.'s Resume Icon">
-		</a>
-	</section>
+		<h2 class="subheader">Moon: Autostereoscopic Image</h2>
+		<div id="experimental_parallax_1" class="parallax"></div>
+		<img class="no_parallax" src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Autostereoscope of a moon made in a similar style to Magic Eye">
 
-			<h2 class="subheader">Experimental Gallery</h2>
-	     	     	<div class="spacer"></div>
-			<div id="down_parallax" class="parallax"></div>
-	     
-			<h2 class="subheader">Moon: Autostereoscopic Image</h2>
-			<div id="experimental_parallax_1" class="parallax"></div>
-			<img class="no_parallax" src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Autostereoscope of a moon made in a similar style to Magic Eye">
-
-			<h2 class="subheader">Torus: Free-viewing Stereoscopic Image</h2>
-			<div id="experimental_parallax_2" class="parallax"></div>
-			<img class="no_parallax" src="Multimedia Art Portfolio/6. Experimental/b. Freeviewing Stereoscopic Image - Torus.png" alt="Stereoscopic image of a torus made in a similar style to a ViewMaster slide">
-
-		</body>  
-	</html>  
-
-
-
+		<h2 class="subheader">Torus: Free-viewing Stereoscopic Image</h2>
+		<div id="experimental_parallax_2" class="parallax"></div>
+		<img class="no_parallax" src="Multimedia Art Portfolio/6. Experimental/b. Freeviewing Stereoscopic Image - Torus.png" alt="Stereoscopic image of a torus made in a similar style to a ViewMaster slide">
+	</body>  
+</html>
