--- a/Experimental Gallery.html
+++ b/Experimental Gallery.html
@@ -11,7 +11,7 @@
 		<meta property="fb:admins" content="USER_ID"/>
 		<meta property="og:description" content="Raymond G. Feilner, Jr.'s Experimental Art Techniques Gallery"/>
 		<link rel="icon" href="icon.ico" type="image/x-icon">
-		<meta name="Keywords" content="Raymond G Feilner Jr, Portfolio, Art, Multimedia, Experimental, Autosetereoscopes, Blender, Photoshop, Gimp, Inkscape, Illustrator, 3D">
+		<meta name="Keywords" content="Raymond G Feilner Jr, Portfolio, Art, Multimedia, Experimental, Autosetereoscopes, Magic Eye, View-Master, Blender, Photoshop, Gimp, Inkscape, Illustrator, 3D">
 		<link href="main.css" rel="stylesheet" type="text/css"/>
 		<!--<script src="https://code.jquery.com/jquery-latest.js"></script>-->
 		<!--<script src="main.js"></script>-->
